--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,28 @@
 .Board {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     width: 80vw;
     height: 70vh;
+    padding: 2px;
     background-color: rgb(30, 30, 30);
 }
 
 .Row {
-    width: 100%;
+    width: stretch;
     height: 16%;
     background-color: rgb(56,56,56);
+}
+
+.Label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100px;
+    font-size: 32px;
+    font-weight: bold;
+    color: black;
+    background-color: rgb(5, 184, 5);
 }
