--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 80vw;
+    width: 100%;
     height: 70vh;
     padding: 2px;
     background-color: rgb(30, 30, 30);
