--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,13 @@
     width: 100%;
     height: 70vh;
     padding: 2px;
+    margin-bottom: 20px;
     background-color: rgb(30, 30, 30);
 }
 
 .Tier {
     display: flex;
-    width: stretch;
+    width: 100%;
     height: 16%;
     background-color: rgb(56,56,56);
 }
@@ -37,8 +38,16 @@
 
 .Card {
     display: flex;
-    height: 100%;
+    justify-content: center;
+    height: auto;
     width: 100px;
     margin-left: 4px;
     background-color: white;
+}
+
+.CardList {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
 }
